Add basic styles

--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome Books</title>
+    <link rel="stylesheet" href="./css/styles.css" />
     <script defer src="./js/script.js"></script>
   </head>
   <body>
-    <h1>Awesome Books</h1>
-    <ul>
-      <li>
-        <span class="title">Lorem, ipsum</span>
-        <span class="author">Testeroo Testty</span>
-        <button>Remove</button>
-      </li>
-      <li>
-        <span class="title">Lorem, ipsum</span>
-        <span class="author">Testeroo Testty</span>
-        <button>Remove</button>
-      </li>
-    </ul>
+    <section>
+      <h1>Awesome Books</h1>
+      <ul>
+        <li>
+          <span class="title">Lorem, ipsum</span>
+          <span class="author">Testeroo Testty</span>
+          <button>Remove</button>
+        </li>
+        <li>
+          <span class="title">Lorem, ipsum</span>
+          <span class="author">Testeroo Testty</span>
+          <button>Remove</button>
+        </li>
+      </ul>
 
-    <form action="">
-      <p><input type="text" placeholder="Title" /></p>
-      <p><input type="text" placeholder="Author" /></p>
-      <button>Add</button>
-    </form>
+      <form action="">
+        <p><input type="text" placeholder="Title" /></p>
+        <p><input type="text" placeholder="Author" /></p>
+        <button>Add</button>
+      </form>
+    </section>
   </body>
 </html>
