Add hard coded value of bookCollection array to bookElem ul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <h1>Awesome Books</h1>
-      <ul>
+      <ul id="book-collection">
         <li>
           <span class="title">Lorem, ipsum</span>
           <span class="author">Testeroo Testty</span>
