Remove hard coded li

--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
   <body>
     <section>
       <h1>Awesome Books</h1>
-      <ul id="book-collection">
-        <li>
-          <span class="title">Lorem, ipsum</span>
-          <span class="author">Testeroo Testty</span>
-          <button>Remove</button>
-        </li>
-        <li>
-          <span class="title">Lorem, ipsum</span>
-          <span class="author">Testeroo Testty</span>
-          <button>Remove</button>
-        </li>
-      </ul>
+      <ul id="book-collection"></ul>
 
       <form action="">
-        <p><input type="text" placeholder="Title" /></p>
-        <p><input type="text" placeholder="Author" /></p>
-        <button>Add</button>
+        <p><input type="text" placeholder="Title" id="input-title" /></p>
+        <p><input type="text" placeholder="Author" id="input-author" /></p>
+        <button id="btn-add-book">Add</button>
       </form>
     </section>
   </body>
